--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <a class="bigbutton" target="_blank" href="https://www.instagram.com/lucky_gwangbae/">Instagram</a>
         <a class="bigbutton" target="_blank" href="https://konggwangbae.github.io/my.page/">2023 Bucket list</a>
         <a class="bigbutton" target="_blank" href="https://luckygwangbae.github.io/Calculator/">Retro Calculator</a>
+        <a class="bigbutton" target="_blank" href="https://allforone-oneforall.tistory.com/">개발 회고록</a>
         <p class="source">made by lucky Gwang_bae</p>
     </div>
 </body>
